chore: mudando nome das variaveis do jwt por compatibilidade com github actions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
 security:
   jwt:
     token:
-      secret-key: ${JWT-SECRET-KEY}
-      expire-length: ${JWT-EXPIRE-LENGTH}
+      secret-key: ${JWT_SECRET_KEY}
+      expire-length: ${JWT_EXPIRE_LENGTH}
       
