ci: dividindo os testes dos ambientes dev e hom em dois workflows

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/hub_db
+    url: jdbc:postgresql://${POSTGRE_HOST_DEV:localhost}:5432/hub_db
     username: root
     password: root
     driver-class-name: org.postgresql.Driver
