--- a/.github/workflows/test-dev.yml
+++ b/.github/workflows/test-dev.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Wait for Postgres to be ready
               run: |
                 for i in {1..10}; do
-                    pg_isready -h postgres -p 5432 && echo "Postgres is up" && exit 0
+                    nc -z postgres 5432 && echo "Postgres is up" && exit 0
                     echo "Waiting for Postgres..."
                     sleep 3
                 done
