--- a/.github/workflows/test-hom.yml
+++ b/.github/workflows/test-hom.yml
@@ -20,4 +20,4 @@ jobs:
                 restore-keys: |
                     maven-${{ runner.os }}
             - name: Install dependencies and test
-              run: mvn clean test -Dspring.profiles.active=hom
+              run: mvn clean test -X
