--- a/.github/workflows/run-tests-on-pr.yml
+++ b/.github/workflows/run-tests-on-pr.yml
@@ -1,5 +1,5 @@
 # finalidade: rodar testes quando uma pr for aberta em direção a hom ou dev
-name: Run tests bases on environment
+name: Run tests
 on:
   pull_request:
     types: opened
@@ -7,9 +7,38 @@ on:
       - hom
       - dev
 jobs:
-  run-dev:
-    if: github.event.pull_request.base.ref == 'dev'
-    uses: astra-software/hub-back/.github/workflows/test-dev.yml@main
-  run-hom:
-    if: github.event.pull_request.base.ref == 'hom'
-    uses: astra-software/hub-back/.github/workflows/test-hom.yml@main
+    build_and_test:
+        runs-on: ubuntu-latest
+        container: 
+            image: maven:3.9.9-eclipse-temurin-21-alpine
+        services:
+            postgres:
+                image: postgres
+                env:
+                    POSTGRES_USER: root
+                    POSTGRES_PASSWORD: root
+                    POSTGRES_DB: hub_db
+                ports:
+                    - 5432:5432
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+            - name: Set host variable
+              run: echo 'POSTGRE_HOST_DEV=postgres' >> $GITHUB_ENV
+            - name: Wait for Postgres to be ready
+              run: |
+                for i in {1..10}; do
+                    nc -z postgres 5432 && echo "Postgres is up" && exit 0
+                    echo "Waiting for Postgres..."
+                    sleep 3
+                done
+                echo "Postgres did not start in time" && exit 1
+            - name: Cache dependency
+              uses: actions/cache@v4
+              with:
+                path: ~/.m2
+                key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+                restore-keys: |
+                    maven-${{ runner.os }}
+            - name: Install dependencies and test
+              run: mvn clean test -X
