--- a/.github/workflows/deploy-image-hom.yml
+++ b/.github/workflows/deploy-image-hom.yml
@@ -37,8 +37,8 @@ jobs:
               uses: actions/checkout@v4
             - name: Install Railway CLI
               run: |
-                curl -sSL https://railway.app/cli.sh | bash
-                export PATH="$PATH:$HOME/.railway/bin"
+                curl -fsSL https://github.com/railwayapp/cli/releases/download/v1.0.1/railway-linux-x64.tar.gz | tar -xz
+                sudo mv railway /usr/local/bin/railway
             - name: Authenticate with Railway
               run: |
                 railway login --apiKey ${{ secrets.RAILWAY_API_KEY }}
