--- a/.github/workflows/deploy-image-hom.yml
+++ b/.github/workflows/deploy-image-hom.yml
@@ -1,29 +1,3 @@
-# name: Deploy Docker image to Render
-# on:
-#   push:
-#     branches:
-#         - hom
-# jobs:
-#     deploy-to-hub:
-#         runs-on: ubuntu-latest
-#         steps:
-#             - name: Checkout repo
-#               uses: actions/checkout@v4
-#             - name: Login on Hub
-#               uses: docker/login-action@v3
-#               with:
-#                 username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#                 password: ${{ secrets.DOCKER_HUB_TOKEN }}
-#             - name: Push image to Hub
-#               run: |
-#                 docker build -t sntpwbl/hub_hom_api:latest .
-#                 docker push sntpwbl/hub_hom_api:latest
-#             - name: Deploy to Render
-#               run: |
-#                 curl -X POST "https://api.render.com/v1/services/srv-cujbno8gph6c73bdurp0/deploys" \
-#                 -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-#                 -H "Content-Type: application/json" \
-#                 --data '{}'
 name: Deploy Docker image to Render
 on:
   push:
@@ -32,19 +6,21 @@ on:
 jobs:
     deploy-to-hub:
         runs-on: ubuntu-latest
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_KEY }}
         steps:
             - name: Checkout repo
               uses: actions/checkout@v4
             - name: Install Node.js
               uses: actions/setup-node@v3
               with:
-                node-version: '16'  # Escolha a versão do Node.js que preferir
+                node-version: '16'
             - name: Install Railway CLI using npm
               run: |
                 npm install -g @railway/cli
             - name: Authenticate with Railway
               run: |
-                railway login --apiKey ${{ secrets.RAILWAY_API_KEY }}
+                railway login --browserless
             - name: Create Tunnel to Railway Database
               run: |
                 railway link
